Set up to create the tokenizer class

--- a/text_data_preparation.ipynb
+++ b/text_data_preparation.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "028cd798",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "20479"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "47e79584",
    "metadata": {},
    "outputs": [
@@ -52,19 +52,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hello,', ' ', 'this', ' ', 'is', ' ', 'textthat', ' ', 'will', ' ', 'be', ' ', 'used', ' ', 'for', ' ', 'regular', ' ', 'expression', ' ', 'examples.']\n"
+      "Imported regular expressions!\n"
      ]
     }
    ],
    "source": [
-    "# Trialing out regular expression\n",
-    "# Regular expression supplied by the video\n",
+    "# Import regular expressions\n",
     "import re\n",
-    "\n",
-    "re_example_text = \"Hello, this is textthat will be used for regular expression examples.\"\n",
-    "\n",
-    "regular_expression_result = re.split(r'(\\s)', re_example_text)\n",
-    "print(regular_expression_result)"
+    "print(\"Imported regular expressions!\")"
    ]
   },
   {
@@ -77,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "98010ba4",
    "metadata": {},
    "outputs": [
@@ -95,6 +90,50 @@
     "the_verdict_tokens = re.split(r'([,.:;?_!\"()\\']|--|\\s)', the_verdict_raw_text)\n",
     "the_verdict_tokens = [token for token in the_verdict_tokens if token.strip()]\n",
     "print(len(the_verdict_tokens))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "045603fc",
+   "metadata": {},
+   "source": [
+    "#### Create a Vocabulary out the words in 'The Verdict'\n",
+    "#### Assign them each a Unique Token Id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8771f625",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "979\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_words = sorted(set(the_verdict_tokens)) # Get only unique tokens, and sort them alphabetically\n",
+    "vocabulary_size = len(all_words)\n",
+    "\n",
+    "# Go over every token and assign them a unique token id using enumerate\n",
+    "token_to_id_mapping = {token:token_id for token_id, token in enumerate(all_words)} "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f602db8d",
+   "metadata": {},
+   "source": [
+    "#### Create your own version of the Version One Tokenizer\n",
+    "To Note:\n",
+    "* It can take in a sample text in \\_\\_init\\_\\_(...)\n",
+    "* It can then create a mapping dictionary from tokens to ids using the \\_\\_init\\_\\_(...) function\n",
+    "* For the function encode_text(...), it can use the token to ids mapping dictionary to take in a string containing a sentence, and then output a list of integer ids\n",
+    "* For the function decode_ids(...), it can use the token to ids mapping dictionary to take in a list of ids encoding a sentence, and then output the corresponding list of tokens. You can also specify a parameter to output the sentence as a string."
    ]
   },
   {
