Creating a data loader for the data

--- a/text_data_preparation.ipynb
+++ b/text_data_preparation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "ac735184",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "47e79584",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "101c6b59",
    "metadata": {},
    "outputs": [],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "60f69578",
    "metadata": {},
    "outputs": [
@@ -486,6 +486,87 @@
     "# Get all token ids, of 'The Verdict' text, starting from the 100th token.\n",
     "truncated_verdict_token_ids_gpt2_tokenizer = encoded_verdict_raw_text_from_gpt2_tokenizer[100:]\n",
     "print(len(truncated_verdict_token_ids_gpt2_tokenizer))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c27c0d5",
+   "metadata": {},
+   "source": [
+    "#### Use PyTorch to use their Dataloaders - very useful"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc79bf57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.7.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(torch.__version__)\n",
+    "\n",
+    "# Number of tokens we want to consider when training to predict next tokens\n",
+    "context_size = 4 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92bd474b",
+   "metadata": {},
+   "source": [
+    "#### Dataset Class to enable usage of Pytorch Dataloaders\n",
+    "##### Just copied it directly from the video because making this from scratch seems tedious"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdca551b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch import Dataset, Dataloader\n",
+    "\n",
+    "class GPTDatasetV1 (Dataset):\n",
+    "  def init_(self, txt, tokenizer, max_length : int, stride: int):\n",
+    "    self.input_ids = []\n",
+    "    self.target_ids = []\n",
+    "\n",
+    "    # Tokenize the entire text\n",
+    "    token_ids = tokenizer.encode(txt, allowed_special={\"<|endoftext|>\"})\n",
+    "    \n",
+    "    # Use a sliding window to chunk the book into overlapping sequences of max_length\n",
+    "    for i in range(0, len(token_ids) - max_length, stride):\n",
+    "\n",
+    "      # Get input chunk\n",
+    "      input_chunk = token_ids[i:i + max_length]\n",
+    "\n",
+    "      # Get target chunk, which is just the input chunk, but slid over one position forward.\n",
+    "      target_chunk = token_ids [i + 1: 1 + max_length + 1]\n",
+    "\n",
+    "      # Append to appropriate instance fields\n",
+    "      self.input_ids.append(torch.tensor(input_chunk))\n",
+    "      self.target_ids.append(torch.tensor(target_chunk))\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "      return len(self.input_ids)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "      return self.input_ids[idx], self.target_ids[idx]\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "Type out the Dataloader class definition!\n",
+    "\"\"\""
    ]
   }
  ],
