Updating my progress - at the part where we are handling word embeddings into vectors of numbers

--- a/text_data_preparation.ipynb
+++ b/text_data_preparation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "ac735184",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "028cd798",
    "metadata": {},
    "outputs": [
@@ -208,7 +208,7 @@
        "20479"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "47e79584",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "98010ba4",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "id": "8771f625",
    "metadata": {},
    "outputs": [],
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "id": "3ef7e75e",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "id": "b346c3c7",
    "metadata": {},
    "outputs": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "id": "1d6b3f91",
    "metadata": {},
    "outputs": [],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "101c6b59",
    "metadata": {},
    "outputs": [],
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "id": "60f69578",
    "metadata": {},
    "outputs": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "dc79bf57",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "bdca551b",
    "metadata": {},
    "outputs": [],
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "id": "0f7d466a",
    "metadata": {},
    "outputs": [],
@@ -604,11 +604,66 @@
    "execution_count": null,
    "id": "37c893eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inputs: tensor([[   40,   367,  2885,  1464],\n",
+      "        [ 1807,  3619,   402,   271],\n",
+      "        [10899,  2138,   257,  7026],\n",
+      "        [15632,   438,  2016,   257],\n",
+      "        [  922,  5891,  1576,   438],\n",
+      "        [  568,   340,   373,   645],\n",
+      "        [ 1049,  5975,   284,   502],\n",
+      "        [  284,  3285,   326,    11]])\n",
+      "Labels: tensor([[  367,  2885,  1464,  1807],\n",
+      "        [ 3619,   402,   271, 10899],\n",
+      "        [ 2138,   257,  7026, 15632],\n",
+      "        [  438,  2016,   257,   922],\n",
+      "        [ 5891,  1576,   438,   568],\n",
+      "        [  340,   373,   645,  1049],\n",
+      "        [ 5975,   284,   502,   284],\n",
+      "        [ 3285,   326,    11,   287]])\n"
+     ]
+    }
+   ],
    "source": [
-    "dataloader = create_dataloader_v1(the_verdict_raw_text_for_gpt2_tokenizer, batch_size=1, max_length=4, stride=1, shuffle=False)\n",
-    "for batch in dataloader:\n",
-    "  print(batch)"
+    "# Examples of using the dataloader\n",
+    "# We'll use the dataloader later. We just made it now just to have it for now.\n",
+    "\n",
+    "dataloader = create_dataloader_v1(the_verdict_raw_text_for_gpt2_tokenizer, batch_size=8, max_length=4, stride=4, shuffle=False)\n",
+    "data_iterator = iter(dataloader)\n",
+    "inputs, labels = next(data_iterator)\n",
+    "print(\"Inputs:\",inputs)\n",
+    "print(\"Labels:\",labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36234614",
+   "metadata": {},
+   "source": [
+    "#### Handling Embeddings\n",
+    "##### Embeddings are a concept that converts tokens into vectors of numbers that can be more easily processed by Neural Networks. Embedding Layers take in any word from your vocabulary and output a vector of numbers that represent that word. Words that are close in meaning should have similar embedding vectors. Words that are farther apart in meaning should have more different embedding vectors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "6cdaad0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50257\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((gpt2_tokenizer.n_vocab))"
    ]
   }
  ],
