Added in positional embedding information to the LLM From Scratch workflow

--- a/text_data_preparation.ipynb
+++ b/text_data_preparation.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "101c6b59",
    "metadata": {},
    "outputs": [],
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "60f69578",
    "metadata": {},
    "outputs": [
@@ -468,8 +468,7 @@
      "output_type": "stream",
      "text": [
       "50257\n",
-      "5145\n",
-      "[49345]\n"
+      "5145\n"
      ]
     }
    ],
@@ -498,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "dc79bf57",
    "metadata": {},
    "outputs": [
@@ -529,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "id": "bdca551b",
    "metadata": {},
    "outputs": [],
@@ -590,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "id": "0f7d466a",
    "metadata": {},
    "outputs": [],
@@ -602,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "37c893eb",
    "metadata": {},
    "outputs": [
@@ -651,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "id": "6cdaad0e",
    "metadata": {},
    "outputs": [],
@@ -667,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "7a5732c3",
    "metadata": {},
    "outputs": [
@@ -676,17 +675,16 @@
      "output_type": "stream",
      "text": [
       "Parameter containing:\n",
-      "tensor([[-1.7215, -0.3465,  1.4418],\n",
-      "        [ 1.9154, -0.2029, -0.4108],\n",
-      "        [-0.1228,  0.4111, -2.1857],\n",
+      "tensor([[ 2.9233,  1.0037,  0.1829],\n",
+      "        [ 0.5822, -0.6715,  1.2714],\n",
+      "        [-1.1777,  1.0527,  3.4323],\n",
       "        ...,\n",
-      "        [-1.3413, -0.7590,  0.3163],\n",
-      "        [-4.7096, -1.7237,  0.4301],\n",
-      "        [ 1.0938,  0.3622,  1.6139]], requires_grad=True)\n",
-      "torch.Size([50257, 3])\n",
-      "tensor([[ 1.9154, -0.2029, -0.4108],\n",
-      "        [-0.1228,  0.4111, -2.1857],\n",
-      "        [ 0.3138,  0.4572, -0.7848]], grad_fn=<EmbeddingBackward0>)\n"
+      "        [ 0.6196, -0.4562,  0.2098],\n",
+      "        [ 0.9965, -0.2599, -0.4758],\n",
+      "        [-0.7815,  0.5118,  1.0793]], requires_grad=True)\n",
+      "tensor([[ 0.5822, -0.6715,  1.2714],\n",
+      "        [-1.1777,  1.0527,  3.4323],\n",
+      "        [-0.0044,  0.4648, -0.6622]], grad_fn=<EmbeddingBackward0>)\n"
      ]
     }
    ],
@@ -710,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 74,
    "id": "157dc71e",
    "metadata": {},
    "outputs": [
@@ -723,13 +721,116 @@
     }
    ],
    "source": [
+    "# Create an embedding layer to go from token to positional information.\n",
     "vocab_size = gpt2_tokenizer.n_vocab # 50257 # Number of embeddings dimension\n",
     "output_dim = 256 # More realistic embedding vector dimension than the 3 we had \n",
     "                 # for illustrative purposes.\n",
     "\n",
     "\n",
-    "embedding_layer = torch.nn.Embedding(vocab_size, output_dim)\n",
-    "print(embedding_layer.weight.shape)"
+    "# First dimension: How many total different tokens we can have an embedding vector for.\n",
+    "# Second dimension: How many elements exist in each embedding vector.\n",
+    "token_embedding_layer = torch.nn.Embedding(vocab_size, output_dim)\n",
+    "print(token_embedding_layer.weight.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "84b05257",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-0.9988, -0.6960,  0.0654, -0.8880,  0.5823, -1.2427, -1.0526,  0.4930,\n",
+      "         0.7341,  1.9821,  0.1357, -0.4956,  0.0997,  0.4063, -0.3367,  1.4633,\n",
+      "        -0.0184, -0.9584, -0.0308,  0.9638,  2.5644, -0.5611, -0.8829,  1.1227,\n",
+      "         0.4256,  0.4582,  0.6336, -0.0855,  0.4454, -0.3518,  1.7052, -0.8487,\n",
+      "         0.8234,  2.1771, -1.3618, -0.1450, -0.5358, -1.6696, -0.8202,  1.0337,\n",
+      "        -0.1173, -0.7754,  0.8385,  0.8295,  1.3024,  0.4284, -0.3607,  0.7992,\n",
+      "         1.3933,  0.0941,  0.2372, -0.2370,  1.4910,  0.9987, -1.1865, -0.3069,\n",
+      "         0.1346,  0.5661, -0.5148, -0.3957, -1.0687, -0.1233, -1.8526,  1.3663,\n",
+      "        -0.3923,  1.2786, -0.8598,  0.1056,  0.1019,  1.3633,  0.2277,  0.4245,\n",
+      "        -1.2892, -0.9338,  0.2264,  0.7138, -0.9484, -2.1643, -0.0120, -0.7847,\n",
+      "        -0.5763,  0.3662,  1.5207, -1.4789, -1.7094, -0.0849, -0.3197, -0.8684,\n",
+      "         0.2736, -0.5588,  0.8553,  0.6062,  0.9378, -0.3888,  0.3244,  1.1698,\n",
+      "         0.4177, -0.2731,  0.3238, -0.6351, -1.9642, -0.0474, -1.3413,  0.4355,\n",
+      "        -0.3439, -0.1652,  0.6072,  0.9068, -0.0852, -0.1722, -0.5509,  0.8748,\n",
+      "        -0.5640,  1.2107,  0.7526,  0.7932,  0.2743,  1.0880, -1.2865,  1.6531,\n",
+      "        -0.0325, -1.0153, -2.1195,  0.8458, -0.9857,  1.9651,  0.2777,  0.4682,\n",
+      "        -1.9025,  2.5973,  0.0719,  0.1231, -1.1292, -0.1047,  0.3509, -0.2518,\n",
+      "         1.4182,  0.3809, -1.3517, -0.9540,  0.2266, -1.1530,  0.0403,  1.4518,\n",
+      "        -0.0029, -0.1432, -1.2281,  0.2830,  0.6780,  0.2608, -0.4619, -0.4088,\n",
+      "         0.3031, -0.4473,  0.0439, -0.0711,  0.6193, -0.6569,  0.8196,  1.8275,\n",
+      "         0.3887,  0.3257, -1.4706,  1.8600,  0.4877, -1.0355,  0.9279,  0.3640,\n",
+      "        -0.6234, -0.9380, -0.4836,  0.8421,  1.1911,  0.6842, -0.6105,  0.1545,\n",
+      "         1.5524, -1.0893, -0.0384, -0.8936,  2.3283, -0.2223,  0.0852,  0.5647,\n",
+      "        -1.0834,  0.6756,  0.3255,  0.3094,  0.4469, -0.2394, -1.2017, -2.0663,\n",
+      "        -0.1878, -0.8454, -0.7637, -0.5406,  1.2496, -0.9707, -0.6456, -0.5706,\n",
+      "        -0.2790,  1.3337, -0.5311, -0.2161,  0.1899, -1.7371,  0.9012, -0.9557,\n",
+      "         0.1938, -0.1516,  1.2553, -0.2842,  1.6231,  0.6738,  0.3557,  0.8971,\n",
+      "        -0.9276, -0.2716,  0.3060, -0.4791,  0.3748, -0.3203,  0.7920, -1.7528,\n",
+      "        -0.1945,  0.4383, -0.0241, -0.1220,  0.5495,  0.9001,  0.8425,  1.4573,\n",
+      "        -0.8702,  1.3802, -2.4108,  0.3376,  2.7215, -0.3172,  0.7191, -0.3526,\n",
+      "        -0.3978, -0.7430,  0.6007,  1.1591, -0.4879, -0.5774, -1.1846,  0.2596,\n",
+      "         0.5299, -0.5955, -0.7424, -0.7372,  0.0365,  0.9286,  0.7425,  0.8639],\n",
+      "       grad_fn=<SelectBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a dataloader to load our data in batches.\n",
+    "max_length_of_each_example = 4\n",
+    "dataloader = create_dataloader_v1(the_verdict_raw_text_for_gpt2_tokenizer, \n",
+    "                                  batch_size=8, \n",
+    "                                  max_length=max_length_of_each_example,\n",
+    "                                  stride=max_length_of_each_example,\n",
+    "                                  shuffle=False)\n",
+    "\n",
+    "data_iterator = iter(dataloader)\n",
+    "inputs, outputs =next(data_iterator)\n",
+    "\n",
+    "#print(inputs)\n",
+    "#print(outputs)\n",
+    "\n",
+    "# Shape is (8, 4, 256)\n",
+    "# We have 8 examples. Each example has 4 tokens.\n",
+    "# Each token has a 256 element embedding vector associated with it.\n",
+    "\n",
+    "# To summarize, the embedding layer is called on each individual element of the inputs tensor.\n",
+    "token_embeddings = token_embedding_layer(inputs)\n",
+    "print(token_embeddings[0,3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dffca97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 256])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a second embedding layer to encode positional information of tokens.\n",
+    "# We add the positional embedding vectors to the token-meaning embedding vectors \n",
+    "# to create our input embedding vectors.\n",
+    "\n",
+    "# In practice, the context length, how many tokens GPT-2 can pay attention to at \n",
+    "# once, is much bigger, on the scale of 1024 tokens or more. Modern GPT systems\n",
+    "# can pay attention to much bigger context lengths.\n",
+    "context_length = max_length_of_each_example\n",
+    "\n",
+    "# First dimension: The length of each example, or how many tokens are in each training example\n",
+    "# Second dimension: The length of the embedding vector (same as the one for the token_embedding_layer)\n",
+    "positional_embedding_layer = torch.nn.Embedding(context_length, output_dim)\n",
+    "print(positional_embedding_layer.weight.shape)"
    ]
   }
  ],
